--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,14 +16,14 @@
 <style>
 #map {
     position: fixed;
-    width:50%;
+    width:66%;
 }
 #features {
     width: 50%;
     margin-left: 50%;
     font-family: Tw Cen MT;
     overflow-y: scroll;
-    background-color: #fafafa;
+    background-color: #424242;
 }
 section {
     padding:  25px 50px;
@@ -83,7 +81,7 @@ section:last-child {
 mapboxgl.accessToken = 'pk.eyJ1Ijoiam9lbWgxODEwIiwiYSI6ImNqZnRpYjRoYjB6NW0zNG83OTFhZGk0cnMifQ.Z-GkURfEyrYsm-TOC3P1VA';
 var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/outdoors-v10',
+    style: 'mapbox://styles/joemh1810/cjgqlmc8c00072rrrrr336r4s',
         bearing: -0,
         center: [-108.866174, 49.272291],
         zoom: 2,
