--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     width:66%;
 }
 #features {
-    width: 50%;
-    margin-left: 50%;
+    width: 34%;
+    margin-left: 66%;
     font-family: Tw Cen MT;
     overflow-y: scroll;
     background-color: #424242;
@@ -31,6 +31,7 @@ section {
     border-bottom: 1px solid #ddd;
     opacity: 0.25;
     font-size: 20px;
+    color: #ffffff;
 }
 section.active {
     opacity: 1;
