--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ section:last-child {
 <div id='features'>
     <section id='welcome' class='active'>
         <h3>Hey, there!</h3>
-        <p>Welcome to a resumap! A resume can only say so much. <br><br>🤖 And they tend to feel robotic, don't they? <br><br>Resumaps are designed to fill the gaps in your resume. If you want to stand out, a resumap is a fun way to help people get to know you. After all, wouldn't you want to know who you're hiring? So if you want see more, sit back, relax, and enjoy the flight 🚀</p>
+        <p>Welcome to my resumap! A resume only says so much. <br><br>Resumaps are designed to fill the gaps in your resume. If you want to stand out, a resumap is a fun way to help people get to know you. After all, wouldn't you want to know who you're hiring? So if you want see more, sit back, relax, and enjoy the flight 🚀</p>
     </section>
     <section id='section1' class='active'>
-        <h3>Section 1</h3>
-        <p>Here's where you can add a narrative to take your resume to the next level. Where did you come from? What really brought you there? What made you leave? This is to let people get a glimpse of who the person behind the paper is. This is New Mexico...but you can center your map however you want.
+        <h3>Birth</h3>
+        <p>I was born in Stepping Hill Hospital in Stockport, 18th October 1994.
     </section>
     <section id='section2'>
         <h3>Section 2</h3>
@@ -99,7 +99,7 @@ var chapters = {
     },
     'section1': {
         bearing: 0,
-        center: [-105.391504, 34.371086],
+        center: [53.384204, -2.132043],
         zoom: 6.00,
         pitch: 0
     },
